<actions xmlns:android="http://schemas.android.com/apk/res/android">
    <action
        android:id="@+id/action_run"
        android:title="@string/start"
        android:icon="@drawable/start"
        android:tint="@color/safe"
        />
    <action
        android:id="@+id/action_info"
        android:title="@string/details"
        android:icon="@drawable/edit"
        android:tint="@color/link"
        />
    <action
        android:id="@+id/action_save"
        android:title="@string/save"
        android:icon="@drawable/save"
        android:tint="@color/rainbow_green"
        />
    <action
        android:id="@+id/action_remove"
        android:title="@string/delete"
        android:icon="@drawable/delete"
        android:tint="@color/danger"
        />
    <action
        android:id="@+id/action_export"
        android:title="@string/export"
        android:icon="@drawable/export"
        android:tint="@color/link"
        />
</actions>
