<actions xmlns:android="http://schemas.android.com/apk/res/android">
    <action
        android:id="@+id/menu_setting"
        android:title="@string/menu_setting"
        android:icon="@drawable/setting"
        android:hint="@color/link"
        />
    <action
        android:id="@+id/menu_language"
        android:icon="@drawable/internationalization"
        android:hint="@color/rainbow_orange"
        android:title="@string/menu_language" />
    <action
        android:icon="@drawable/book"
        android:id="@+id/menu_help"
        android:hint="@color/rainbow_yellow"
        android:title="@string/menu_help" />
    <action
        android:hint="@color/rainbow_violet"
        android:icon="@drawable/about"
        android:id="@+id/menu_about"
        android:title="@string/menu_about" />
</actions>
