<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/point_icon"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginEnd="3dp"
            android:src="@drawable/triangle"
            android:translationY="3dp"
            tools:ignore="ContentDescription,UseAppTint" />

        <LinearLayout
            android:id="@+id/btn_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/directional_bg"
            android:orientation="vertical">

            <Button
                android:id="@+id/action_run"
                style="@style/SimpleMenuButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <TextView style="@style/MenuDivider" />

            <Button
                android:id="@+id/action_rename"
                style="@style/SimpleMenuButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rename" />

            <TextView style="@style/MenuDivider" />

            <Button
                android:id="@+id/action_save"
                style="@style/SimpleMenuButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <TextView style="@style/MenuDivider" />

            <Button
                android:id="@+id/action_remove"
                style="@style/SimpleMenuButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <TextView style="@style/MenuDivider" />

            <Button
                android:id="@+id/action_export"
                style="@style/SimpleMenuButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/export" />

        </LinearLayout>
    </LinearLayout>
</layout>