<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp">

        <Button
            style="@style/linkButton"
            android:id="@+id/btn_display"
            android:text="@string/display" />

        <Button
            style="@style/linkButton"
            android:id="@+id/btn_pick"
            android:text="@string/pick" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/secondary"
            android:labelFor="@id/x_input"
            android:layout_marginEnd="15dp"
            android:text="@string/point_label_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:background="@drawable/input"
            android:id="@+id/x_input"
            android:autofillHints=""
            android:inputType="number"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/secondary"
            android:labelFor="@id/x_input"
            android:layout_marginEnd="15dp"
            android:text="@string/point_label_y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:background="@drawable/input"
            android:id="@+id/y_input"
            android:autofillHints=""
            android:inputType="number"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>