<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="pub.carzy.auto_script.R" />

        <import type="pub.carzy.auto_script.adapter.Converter" />

        <variable
            name="count"
            type="java.lang.Integer" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_border"
        android:minWidth="300dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/adjust"
            android:textColor="@color/warning"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:labelFor="@+id/count_input"
                android:text="@string/loop" />

            <EditText
                android:id="@+id/count_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/input"
                android:inputType="number|numberSigned"
                android:maxLines="1"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:text="@{count&lt;0?context.getString(R.string.infinite_loop):count==0?context.getString(R.string.stop):context.getString(R.string.loop_format,count)}"
            android:textAlignment="textEnd"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:labelFor="@+id/tick_input"
                android:text="@string/time_quantum" />

            <EditText
                android:id="@+id/tick_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/input"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/TextButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/cancel"
                android:textColor="@color/safe"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_confirm"
                style="@style/TextButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:text="@string/confirm"
                android:textColor="@color/link"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</layout>
