<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="pub.carzy.auto_script.model.PreviewFloatingStatus" />

        <import type="pub.carzy.auto_script.R" />

        <import type="android.content.Context" />

        <import type="android.view.View" />
        <variable
            name="status"
            type="PreviewFloatingStatus" />
    </data>

    <LinearLayout
        tools:ignore="UseAppTint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btn_more"
            style="@style/TransparentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@{context.getString(status.selected?R.string.collapse:R.string.expand)}"
            android:onClick="@{e->status.setSelected(!status.selected)}"
            android:src="@{context.getDrawable(status.selected?R.drawable.arrow_down:R.drawable.arrow_up)}"
            android:tint="@color/frosted_glass"
             />

        <ImageButton
            android:id="@+id/btn_simulate"
            style="@style/TransparentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@{context.getString(status.simulate?R.string.message_close_mask:R.string.message_open_mask)}"
            android:onClick="@{e->status.setSimulate(!status.simulate)}"
            android:src="@{context.getDrawable(status.simulate?R.drawable.has_mask:R.drawable.not_mask)}"
            android:visibility="@{status.status!=PreviewFloatingStatus.RUN?View.VISIBLE:View.GONE}"
            android:tint="@{context.getColor(status.simulate?R.color.link:R.color.disabled)}" />

        <ImageButton
            android:id="@+id/btn_close"
            style="@style/TransparentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/exit"
            android:src="@drawable/exit"
            android:visibility="@{status.selected?View.VISIBLE:View.GONE}"
            android:tint="@color/safe" />

        <ImageButton
            android:id="@+id/btn_restart"
            style="@style/TransparentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/restart"
            android:src="@drawable/replay"
            android:visibility="@{(status.status!=PreviewFloatingStatus.NONE &amp;&amp; status.selected)?View.VISIBLE:View.GONE}"
            android:tint="@color/danger" />

        <ImageButton
            android:id="@+id/btn_stop"
            style="@style/TransparentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/help_script_list_stop"
            android:src="@drawable/stop"
            android:visibility="@{(status.status!=PreviewFloatingStatus.NONE &amp;&amp; status.selected)?View.VISIBLE:View.GONE}"
            android:tint="@color/danger" />

        <ImageButton
            android:id="@+id/btn_pause"
            style="@style/TransparentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/help_script_list_pause"
            android:src="@drawable/pause"
            android:visibility="@{(status.status==PreviewFloatingStatus.RUN)?View.VISIBLE:View.GONE}"
            android:tint="@color/danger" />

        <ImageButton
            android:id="@+id/btn_run"
            style="@style/TransparentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/help_script_list_run"
            android:src="@drawable/start"
            android:visibility="@{(status.status!=PreviewFloatingStatus.RUN)?View.VISIBLE:View.GONE}"
            android:tint="@color/safe" />
    </LinearLayout>
</layout>